mejorar vista producto

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -647,9 +647,12 @@ div .box-img {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
 }
 
+
+
 #cerveza .profile-details {
   display: flex;
   flex-direction: column;
+  height: 170px;
   align-items: center;
   border: 2px solid black;
   padding: 10px;
@@ -709,4 +712,8 @@ button {
 
 .profile-product{
   font-size: 1.2em; 
+}
+
+.profile-product p{
+  font-weight: 600;
 }
