--- a/src/views/beer.ejs
+++ b/src/views/beer.ejs
@@ -26,11 +26,14 @@
                         </div>
 
                         <div class="profile-details">
-                            <div class="profile-product">
-                                <%= productId.price %>
+                            <div class="profile-product"> 
+                                <p>Precio $
+                                <%= productId.price %></p>
                             </div>
 
                             <div class="profile-product">
+                                <hr> 
+                                <strong>Descripción:</strong> 
                                 <%= productId.description %>
                             </div>
                         </div>
