--- a/src/public/css/homeMediaQuery.css
+++ b/src/public/css/homeMediaQuery.css
@@ -359,3 +359,37 @@
     overflow: hidden;
   }
 }
+
+
+@media (max-width: 768px) {
+  #cerveza .profile-details {
+    display: none;
+  }
+}
+
+
+
+@media (max-width: 320px) {
+  .profile-imagen {
+    width: 200px; /* Ajusta el tamaño de la imagen según tus necesidades */
+    height: 400px; /* Ajusta el tamaño de la imagen según tus necesidades */
+    margin-top: 20px; /* Ajusta el margen superior según tus necesidades */
+    margin-bottom: 10px; /* Ajusta el margen inferior según tus necesidades */
+  }
+
+  .profile-name {
+    font-size: 2.5em; /* Ajusta el tamaño de fuente según tus necesidades */
+  }
+
+  .profile-product {
+    display: none; /* Oculta el elemento .profile-product */
+  }
+
+  .zoom-button {
+    font-size: 1.4em; /* Ajusta el tamaño de fuente según tus necesidades */
+  }
+
+  #cerveza .profile-details {
+    display: none;
+  }
+}
