--- a/src/views/listUsers.ejs
+++ b/src/views/listUsers.ejs
@@ -13,7 +13,7 @@
                     <% users.forEach((user) => {%>
                         <div id="box-profile-users">
                             <div class="profile-users">
-                              <img src="/img/imageUsers/<%=user.image %>" alt="">  
+                              <img src="/img/imageUsers/<%=user.avatar %>" alt="">  
                             </div>
 
                             <div class="profile-users">
