cookie session agregado

--- a/src/views/formLogin.ejs
+++ b/src/views/formLogin.ejs
@@ -24,6 +24,12 @@
                             <label for="">Contraseña</label>
                             <input type="password" name="password" id="">
                         </div>
+                        <div class="inputlogin">
+                            <label for="recordarme">
+                                <input type="checkbox" name="remember_user" >
+                                recordar mi usuario
+                            </label>
+                        </div>
                         <button type="submit">Ingresar</button>
                     </form>
                 </div>
