--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -13,34 +13,23 @@
 
         <div class="location">
             <h5>¿DONDE ESTAMOS?</h5>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253833.32279187036!2d-75.72165149582689!3d6.24452617673067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4428dfb80fad05%3A0x42137cfcc7b53b56!2sMedell%C3%ADn%2C%20Antioquia!5e0!3m2!1ses!2sco!4v1680470194109!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253833.32279187036!2d-75.72165149582689!3d6.24452617673067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4428dfb80fad05%3A0x42137cfcc7b53b56!2sMedell%C3%ADn%2C%20Antioquia!5e0!3m2!1ses!2sco!4v1680470194109!5m2!1ses!2sco"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div id="info">
-            <h5>Desarrollado con</h5>
-            <p>
-                <img src="/img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt="Creado HTML CSS">
-            </p>
-
-            <h5>Optimizado para</h5>
-            <p id="browsers">
-                <a href="#">
-                    <img src="/img/firefox-icon.png" alt="Firefox" title="Firefox">
-                </a>
-                <a href="#">
-                    <img src="/img/chrome.png" alt="Chrome" title="Chrome">
-                </a>
-                <a href="#">
-                    <img src="/img/android.png" alt="Android" title="Android">
-                </a>
-                <a href="#">
-                    <img src="/img/Opera_256x256.png" alt="Opera" title="Opera">
-                </a>
-                <a href="#">
-                    <img src="/img/safari.png" alt="Safari" title="Safari">
-                </a>
-            </p>
-            <h5>AUTORES</h5>
-            <p>&copy; Casquillera</p>
+        <div id="menu_footer">
+            <h5>Redes</h5>
+            <ul>
+                <li> <a href="#">Facebook</a></li>
+                <li> <a href="">Instragram</a></li>
+                <li> <a href="#">Twitter</a></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <strong>
+                <p>&copy; Casquillera - Todos los derechos reservados</p>
+            </strong>
         </div>
     </div>
 </footer>
