--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -448,7 +448,7 @@ aside h3:first-child {
   box-shadow: 1px 1px 2px #ddd;
 }
 
-#articles #container-products { 
+#articles #container-products {
   width: 97%;
   display: flex;
   flex-wrap: wrap;
@@ -487,7 +487,9 @@ div .box-img {
   margin-top: 10px;
 }
 
-
+ .profile-product img {
+height: 214px;
+}
 
 .box-details .name-product,
 .price-product {
@@ -512,6 +514,16 @@ div .box-img {
   overflow: hidden;
 }
 
+.panel-Product {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+}
+
+#box-profile-product a{
+text-decoration: none;
+}
 
 
 .box-details .name-product,
@@ -521,8 +533,8 @@ div .box-img {
   margin: 7px;
 }
 
-.wrap-content{
-  padding: 105px;
+.wrap-content {
+  padding-top: 105px;
 }
 
 
@@ -539,11 +551,28 @@ div .box-img {
   overflow: hidden;
 }
 
+#footer .footer_wrap{
+  display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#footer .footer_wrap .copyright{
+  width: 100%;
+}
+
+#footer .footer_wrap .copyright:hover{
+  color: white;
+  text-decoration: underline;
+  font-size: 22px;
+  filter: drop-shadow(8PX 2PX 6PX BLACK);
+}
+
 #footer .wrap>div {
   float: left;
   width: 320px;
   height: 370px;
-  margin: 40px;
+  margin: 25px;
   text-align: center;
   color: #47361A;
   font-size: 20px;
@@ -611,6 +640,8 @@ div .box-img {
   width: 45px;
 }
 
+/*final footer*/
+
 /*Nuevo*/
 #cerveza {
   text-align: center;
@@ -644,7 +675,7 @@ div .box-img {
 .profile-name {
   font-size: 4.0em;
   font-family: fantasy;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -682,13 +713,13 @@ button {
   transition: all 300ms;
 }
 
-.zoom-button{
+.zoom-button {
   transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 .zoom-button:hover {
   transform: scale(1.1);
- 
+
 }
 
 
@@ -710,10 +741,10 @@ button {
   transform: scale(1.1);
 }
 
-.profile-product{
-  font-size: 1.2em; 
+.profile-product {
+  font-size: 1.2em;
 }
 
-.profile-product p{
+.profile-product p {
   font-weight: 600;
 }
