--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('partials/head.ejs', {title: 'Detalles de Productos'}) %>
+<%- include('partials/head.ejs', {title: 'Detalles de Productos' }) %>
 
 
-<body>
-<!--Inicio cabecera-->
-<%- include('partials/header.ejs') %>
-<!--Fin cabecera-->
+    <body>
+        <!--Inicio cabecera-->
+        <%- include('partials/header.ejs') %>
+            <!--Fin cabecera-->
 
-<div id="list-user">
-    <div class="panel-users">
-        <% products.forEach((product) => { %>
-
-            <div id="box-profile-product">
-                <a href="/product/details/<%= product.id %>">
-                    <div class="profile-product">
-                        <img src="/img/products/<%= product.image %>" alt="">
+            <article class="wrap-content">
+                <div id="list-Product">
+                    <div class="panel-Product">
+                        <% products.forEach((product)=> { %>
+    
+                            <div id="box-profile-product">
+                                <a href="/product/details/<%= product.id %>">
+                                    <div class="profile-product">
+                                        <img src="/img/products/<%= product.image %>" alt="">
+                                    </div>
+    
+                                    <div class="profile-product">
+                                        <p><%= product.name %></p>
+                                    </div>
+    
+                                    <div class="profile-product">
+                                      <strong>Precio :</strong>  <%= product.price %>
+                                    </div>
+    
+                                    <div class="profile-product">
+                                        <div class="product-description">
+                                            <%= product.description %>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <% } ) %>
                     </div>
+                </div>
+    
+    
+            </article>
+            <!--Inicio Footer-->
+            <div class="clearfix"></div>
+            <%- include('partials/footer.ejs') %>
 
-                    <div class="profile-product">
-                        <%= product.name %>
-                    </div>
+                <!--Fin Footer-->
 
-                    <div class="profile-product">
-                        <%= product.price %>
-                    </div>
-
-                    <div class="profile-product">
-                        <%= product.description %>
-                    </div>
-                </a>
-            </div>
-        <% } ) %>
-    </div>
-</div>
-
-
-<!--Inicio Footer-->
-<div class="clearfix"></div>
-<%- include('partials/footer.ejs') %>
-
-<!--Fin Footer-->
-
-<!--Script-->
-<script src="/js/navScript.js"></script>
-</body>
+                <!--Script-->
+                <script src="/js/navScript.js"></script>
+    </body>
 
 </html>
