--- a/src/public/css/loginAndRegister.css
+++ b/src/public/css/loginAndRegister.css
@@ -88,7 +88,24 @@ select {
 
 .boxlogin input,
 select {
-  font-size: 7px;
+  font-size: 11px;
+}
+
+.login {
+  background: white;
+}
+
+.inputlogin {
+  display: flex;
+  justify-content: space-between;
+}
+
+.inputlogin .label {
+  margin: 5px;
+}
+
+.checkbox {
+  padding-top: 20px;
 }
 
 
