creación quienes somos

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -8,6 +8,7 @@
                 <li> <a href="/product">Productos</a></li>
                 <li> <a href="#">Carrito</a></li>
                 <li> <a href="#">Contacto</a></li>
+                <li> <a href="/quienes-somos">Quienes somos</a></li>
             </ul>
         </div>
 
