--- a/src/views/quienesSomos.ejs
+++ b/src/views/quienesSomos.ejs
@@ -14,7 +14,7 @@
                    <br /><br /><br />
                     <p>Casquillera es una cerveceria colombiana que nace en la ciudad de Medellín en el año 2021, 
                        el origen de su nombre se debe a la identidad por la que busca ser reconocida, primero tomando un nombre propio de la
-                       region antioqueña, cuyo significado trasciende a la mujer coqueta y seductora que todos admiramos y queremnos a nuestro lado,
+                       region antioqueña, cuyo significado trasciende a la mujer coqueta y seductora que todos admiramos y queremos a nuestro lado,
                        contamos con seis estilos, muy equilibrados y muy fáciles de tomar, inspirados en las cervezas mas reconocidas a nivel mundial 
                     </p> 
                 </div>
