agregado validacion genero y el input genero

--- a/src/public/css/nav.css
+++ b/src/public/css/nav.css
@@ -7,7 +7,7 @@ body {
 
 /*NavBar*/
 .menu {
-    background-color: #fcad03;
+    background-color: #FDB825;
     color: #fff;
     height: 75px;
     position: fixed;
