--- a/src/views/quienesSomos.ejs
+++ b/src/views/quienesSomos.ejs
@@ -8,10 +8,10 @@
         <!--Inicio cabecera-->
         <%- include('partials/header.ejs') %>
             <!--Fin cabecera-->
-            <div id="list-user">
-                <div class="panel-users">
+            <div id="list-somos">
+                <div class="panel-somos">
                    <h1>QUIENES SOMOS</h1>
-                   <br /><br /><br />
+                   <br /><br />                   
                     <p>Casquillera es una cerveceria colombiana que nace en la ciudad de Medellín en el año 2021, 
                        el origen de su nombre se debe a la identidad por la que busca ser reconocida, primero tomando un nombre propio de la
                        region antioqueña, cuyo significado trasciende a la mujer coqueta y seductora que todos admiramos y queremos a nuestro lado,
