--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -7,7 +7,7 @@
                 <li> <a href="#">Inicio</a></li>
                 <li> <a href="/product">Productos</a></li>
                 <li> <a href="#">Carrito</a></li>
-                <li> <a href="#">Contacto</a></li>
+                <li> <a href="/contacto">Contacto</a></li>
                 <li> <a href="/quienes-somos">Quienes somos</a></li>
             </ul>
         </div>
